logs/Slang/chapter-11/11.4.14.3--unpack_stream.sv.log
name: unpack_stream
description: stream unpack test
should_fail: 0
tags: 11.4.14.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.3--unpack_stream.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.3--unpack_stream.sv:14:17: error: language feature not yet supported
	bit [95:0] d = {<<{a, b, c}};
	               ^~~~~~~~~~~~~
